--- a/SMMAC_Dron_2000/.project
+++ b/SMMAC_Dron_2000/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SMMAC_Dron_2000</name>
+	<name>SMMAC_Drone_2000</name>
 	<comment></comment>
 	<projects>
 	</projects>
