--- a/SMMAC_Dron_2000/.classpath
+++ b/SMMAC_Dron_2000/.classpath
@@ -3,9 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCV"/>
-	<classpathentry kind="lib" path="libs/yadrone_032.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-jdk14-1.7.2.jar"/>
 	<classpathentry kind="lib" path="libs/xuggle-xuggler-5.4.jar"/>
+	<classpathentry kind="lib" path="libs/zxing-2.1.jar"/>
+	<classpathentry kind="lib" path="libs/zxing-javase.jar"/>
+	<classpathentry kind="lib" path="libs/YADrone.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
